--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@ baseproject.iml
 .idea/libraries/Maven__tk_mybatis_mapper_spring_boot_autoconfigure_2_1_5.xml
 .idea/libraries/Maven__tk_mybatis_mapper_spring_boot_starter_2_1_5.xml
 .idea/libraries/Maven__tk_mybatis_mapper_weekend_1_1_5.xml
+target/
