--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+    <!--    引入转码服务器-->
+    <dependency>
+      <groupId>org.example</groupId>
+      <artifactId>transfer-media</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <build>
