修改启动方式

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,5 @@ baseproject.iml
 .idea/libraries/Maven__tk_mybatis_mapper_spring_boot_starter_2_1_5.xml
 .idea/libraries/Maven__tk_mybatis_mapper_weekend_1_1_5.xml
 transfer-media/target/
+.idea/
+target/
